[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/RobotoMono-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/fonts/font = null

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="C" type="CenterContainer" parent="."]
margin_right = 256.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="C"]
margin_left = 55.0
margin_top = 43.0
margin_right = 200.0
margin_bottom = 156.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="C/VB"]
margin_right = 145.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "00:00"

[node name="HB" type="HBoxContainer" parent="C/VB"]
margin_top = 85.0
margin_right = 145.0
margin_bottom = 113.0

[node name="Stop" type="Button" parent="C/VB/HB"]
margin_right = 52.0
margin_bottom = 28.0
text = "STOP"

[node name="Spacer" type="Control" parent="C/VB/HB"]
margin_left = 56.0
margin_right = 79.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Reset" type="Button" parent="C/VB/HB"]
margin_left = 83.0
margin_right = 145.0
margin_bottom = 28.0
text = "RESET"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="C/VB/HB/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="C/VB/HB/Reset" to="." method="_on_Reset_pressed"]
